fix(design): searchbar alignment

--- a/app/design/frontend/Pearl/weltpixel_custom/web/css/source/_header.less
+++ b/app/design/frontend/Pearl/weltpixel_custom/web/css/source/_header.less
@@ -8,6 +8,10 @@
 //  Common
 //  _____________________________________________
 
+.block.block-search {
+    padding: 17px;
+}
+
 & when (@media-common = true) {
     .panel.wrapper {
         display: none;
